--- a/2019_20/ILA/hand-in-3/hand-in.tex
+++ b/2019_20/ILA/hand-in-3/hand-in.tex
@@ -2,7 +2,7 @@
 \usepackage{homework-preamble}
 
 \title{ILA: H3 (Workshop 08)}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{October 15, 2019}
 \begin{document}
 \maketitle
