--- a/2019_20/ILA/preamble/hand-in.tex
+++ b/2019_20/ILA/preamble/hand-in.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \title{ILA: H2 (Workshop 08)}
-\author{Franz Miltz (UNN: s1971811)}
+\author{Franz Miltz (UUN: s1971811)}
 \date{October 8, 2019}
 \begin{document}
 \maketitle
