--- a/2019_20/PPS/homework-5/homework.tex
+++ b/2019_20/PPS/homework-5/homework.tex
@@ -3,7 +3,7 @@
 \mkthms
 
 \title{PPS: Homework 5 (Workshop 33)}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{9 March 2020}
 
 \begin{document}
