--- a/2020_21/PRB/H0/homework.tex
+++ b/2020_21/PRB/H0/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 2 Hand-in}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{29th September 2020}
 \maketitle
 \noindent Let the experiment $E$ be to pick a random number in the sample space
