--- a/2020_21/PRB/H2/week5/homework.tex
+++ b/2020_21/PRB/H2/week5/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 5 Solutions}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{27th October, 2020}
 \maketitle
 
