--- a/2020_21/PRB/H3/week6/homework.tex
+++ b/2020_21/PRB/H3/week6/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 6 Solutions}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{10 November, 2020}
 \maketitle
 
