--- a/2020_21/PRB/H4/hand-in/homework.tex
+++ b/2020_21/PRB/H4/hand-in/homework.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \title{Probability: Week 10 Hand-in}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{24 November, 2020}
 \maketitle
 
