--- a/2021_22/GEO/homework-01/homework.tex
+++ b/2021_22/GEO/homework-01/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Geometry: Hand-in 1}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{11 October 2021}
 \maketitle
 
