--- a/2021_22/GEO/homework-02/homework.tex
+++ b/2021_22/GEO/homework-02/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Geometry: Hand-in 2}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{25 October 2021}
 \maketitle
 \noindent Let $c:[0,2\pi] \to \R^3$ be a curve and $\alpha:\R^3\to\R$ be a $1$-form
