--- a/2021_22/GEO/homework-04/homework.tex
+++ b/2021_22/GEO/homework-04/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Geometry: Hand-in 4}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{22 November 2021}
 \maketitle
 \noindent Let $D=\{u,v,z\in\R : u,v\not=0\}$ and let $\vec x:D\to\E^3$ be such that
