--- a/2021_22/INT/homework-01/homework.tex
+++ b/2021_22/INT/homework-01/homework.tex
@@ -3,7 +3,7 @@
 \DeclareMathOperator{\diam}{diam}
 \begin{document}
 \title{Introduction to Number Theory: Homework 1}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{7 February 2022}
 \maketitle
 
