--- a/2021_22/MS/homework-02/homework.tex
+++ b/2021_22/MS/homework-02/homework.tex
@@ -3,7 +3,7 @@
 \mkanonthms
 \begin{document}
 \title{Metric Spaces: Assignment 2}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{14 February 2022}
 \maketitle
 
