--- a/2019_20/CAP/homework-3/homework.tex
+++ b/2019_20/CAP/homework-3/homework.tex
@@ -2,7 +2,7 @@
 \usepackage{homework-preamble}
 
 \title{CAP: Homework 2 (Workshop 71)}
-\author{Franz Miltz (UNN: s1971811)}
+\author{Franz Miltz (UUN: s1971811)}
 \begin{document}
 \maketitle
 \section*{Question 1}
