--- a/2019_20/CAP/homework-9/homework.tex
+++ b/2019_20/CAP/homework-9/homework.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{homework-preamble}
 \title{CAP: Homework 9 (Workshop 71)}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \begin{document}
 \maketitle
 \section*{Question 1}
