--- a/2019_20/ILA/hand-in-5/hand-in.tex
+++ b/2019_20/ILA/hand-in-5/hand-in.tex
@@ -2,7 +2,7 @@
 \usepackage{homework-preamble}
 
 \title{ILA: H2 (Workshop 08)}
-\author{Franz Miltz (UNN: s1971811)}
+\author{Franz Miltz (UUN: s1971811)}
 \date{October 8, 2019}
 \begin{document}
 \maketitle
