--- a/2019_20/ILA/hand-in-6/hand-in.tex
+++ b/2019_20/ILA/hand-in-6/hand-in.tex
@@ -2,7 +2,7 @@
 \usepackage{homework-preamble}
 
 \title{ILA: H6 (Workshop 08)}
-\author{Franz Miltz (UNN: s1971811)}
+\author{Franz Miltz (UUN: s1971811)}
 \date{November 05, 2019}
 
 \begin{document}
