--- a/2019_20/PPS/homework-4/homework.tex
+++ b/2019_20/PPS/homework-4/homework.tex
@@ -2,7 +2,7 @@
 \usepackage{homework-preamble}
 
 \title{PPS: Homework 4 (Workshop 33)}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{2 March 2020}
 
 \begin{document}
