--- a/2020_21/FPM/H7/homework.tex
+++ b/2020_21/FPM/H7/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{FPM: Hand-in 7}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{15 March 2021}
 \maketitle
 \mkthms
