--- a/2020_21/FPM/H8/homework.tex
+++ b/2020_21/FPM/H8/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{FPM: Hand-in 8}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{22 March 2021}
 \maketitle
 \mkthms
