--- a/2020_21/PRB/H1/hand-in/homework.tex
+++ b/2020_21/PRB/H1/hand-in/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 4 Hand-in}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{6th October 2020}
 \maketitle
 
