--- a/2020_21/PRB/H3/hand-in/homework.tex
+++ b/2020_21/PRB/H3/hand-in/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 8 Hand-in}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{10 November, 2020}
 \maketitle
 
