--- a/2020_21/PRB/H4/week8/homework.tex
+++ b/2020_21/PRB/H4/week8/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Probability: Week 8 Solutions}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{24 November, 2020}
 \maketitle
 
