--- a/2020_21/SVCDE/H4/homework.tex
+++ b/2020_21/SVCDE/H4/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{SVCDE: Hand-in 4}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{18th October 2020}
 \maketitle
 
