--- a/2020_21/SVCDE/H5/homework.tex
+++ b/2020_21/SVCDE/H5/homework.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \title{SVCDE: Hand-in 5}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{25th October 2020}
 \maketitle
 
