--- a/2020_21/SVCDE/H6/homework.tex
+++ b/2020_21/SVCDE/H6/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{SVCDE: Hand-in 6}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{1 November 2020}
 \maketitle
 
