--- a/2021_22/HALG/homework-02/homework.tex
+++ b/2021_22/HALG/homework-02/homework.tex
@@ -3,7 +3,7 @@
 \mkanonthms
 \begin{document}
 \title{Honours Algebra: Practicing Proof 2}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{11 March 2022}
 \maketitle
 \newcommand{\gaussint}{\Z[\sqrt{-1}]}
