--- a/2021_22/HANA/homework-08/homework.tex
+++ b/2021_22/HANA/homework-08/homework.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \title{Honours Analysis: Homework 8}
-\author{Franz Miltz (UNN: S1971811)}
+\author{Franz Miltz (UUN: S1971811)}
 \date{18 November 2021}
 \maketitle
 
