--- a/2021_22/INT/homework-02/homework.tex
+++ b/2021_22/INT/homework-02/homework.tex
@@ -45,14 +45,13 @@
          \item If for some $y$ there exists an $r$ such that $p|j+r^2$, we immediately find the 
             solution $1+x^2+y^2\equiv 0\mod p$ where $0<x<p$ such that $x\equiv r\mod p$.
          \item If for all $y$ there exists an $r$ such that $p|j-r^2$, we have $1+y^2\equiv r^2\mod p$.
-            Note that this implies there exists an $s$ such that $1+r^2\equiv s^2\mod p$. I.e.
+            I.e. $1+y^2$ is a quadratic residue modulo $p$. We may write 
             \begin{align}
                \label{induction}
-               \left(\frac{i}{p}\right)=1\hs\Longrightarrow\hs \left(\frac{i+1}{p}\right)=1.
+               \left(\frac{i}{p}\right)=1\hs\Longrightarrow\hs \left(\frac{i+1}{p}\right)=1 \hs \text{for all }0<i<p-1.
             \end{align}
-            Note $(1/p)=1$.  By applying (\ref{induction}) $p-2$ times starting with $i=1$, we find that 
-            all $1\leq x<p$ are quadratic residues modulo $p$. In particular, we find $p-1\equiv -1\mod p$
-            is a quadratic residue, directly contradicting (\ref{minus_one}).
+            We now note $(1/p)=1$.  By applying (\ref{induction}) $p-2$ times starting with $i=1$, we find that 
+            all $1\leq x<p$ are quadratic residues modulo $p$. In particular, we find $(p-1/p)=1$, directly contradicting (\ref{minus_one}).
       \end{enumerate}
       Since C2 leads to a contradiction, C1 must hold, thus proving the claim.
    \end{proof}
